--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
-        "build": "ng build",
+        "build": "ng build --aot --prod",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
@@ -27,7 +27,7 @@
         "zone.js": "^0.8.4"
     },
     "devDependencies": {
-        "@angular/cli": "1.1.1",
+        "@angular/cli": "1.3.2",
         "@angular/compiler-cli": "^4.0.0",
         "@angular/language-service": "^4.0.0",
         "@types/jasmine": "2.5.45",
